--- a/src/DashAgil.Web/src/index.html
+++ b/src/DashAgil.Web/src/index.html
@@ -13,7 +13,7 @@
   <!-- Plugins Core Css -->
 </head>
 
-<body class="theme-black">
+<body class="theme-black dark">
   <app-root></app-root>
 </body>
 
